ref: update reminders client load

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,6 +20,6 @@ import SignedOut from '@components/SignedOut.vue';
 		</div>
 	</SignedOut>
 	<SignedIn client:load>
-		<Reminders client:only />
+		<Reminders client:visible />
 	</SignedIn>
 </Layout>
