--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,3 +5,16 @@
 }
 
 @custom-variant dark (&:where([data-theme=dracula], [data-theme=dracula] *));
+
+* {
+	scrollbar-width: thin;
+	scrollbar-color: var(--color-base-200) var(--color-base-100) !important;
+}
+
+::-webkit-scrollbar-track {
+	background: var(--color-base-100);
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: var(--color-base-200);
+}
