tiny: update description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import SignedOut from '@components/SignedOut.vue';
 
 <Layout
 	title="Reminder"
-	description="En Reminder, guarda todas esas pequeñas pero importantes cosas que necesitas recordar para mañana, accesible desde cualquiera de tus dispositivos."
+	description="En Reminder guarda todas esas pequeñas pero importantes cosas que necesitas recordar para mañana, accesible desde cualquiera de tus dispositivos."
 >
 	<SignedOut client:load>
 		<div class="card bg-base-200 w-full max-w-xs shadow mx-auto mt-6">
