--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const socialsImage = `${basedOrigin}/socials.png`;
 <html lang="en" data-theme={isDarkThemeDefault ? THEME.DARK : THEME.LIGHT}>
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width,initial-scale=1">
 
 		<meta name="description" content={description} />
 		<meta property="og:title" content={title}>
@@ -34,10 +34,14 @@ const socialsImage = `${basedOrigin}/socials.png`;
 		<meta property="og:site_name" content="Samply Website">
 		<meta name="twitter:image:alt" content={title}>
 
+		<meta name="theme-color" content="#ff79c6">
+
 		<link rel="manifest" href=`${import.meta.env.BASE_URL}/manifest.json`>
 
+		<link rel="icon" href=`${import.meta.env.BASE_URL}/favicon.ico` sizes="48x48">
 		<link rel="icon" type="image/svg+xml" href=`${import.meta.env.BASE_URL}/favicon.svg` />
-		<meta name="generator" content={Astro.generator} />
+		<link rel="apple-touch-icon" href=`${import.meta.env.BASE_URL}/apple-touch-icon.png` sizes="180x180">
+
 		<title>{title}</title>
 		{ pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} /> }
 	</head>
