--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,7 +34,7 @@ const socialsImage = `${basedOrigin}/socials.png`;
 		<meta property="og:site_name" content="Samply Website">
 		<meta name="twitter:image:alt" content={title}>
 
-		<meta name="theme-color" content="#ff79c6">
+		<meta name="theme-color" content="#282a36">
 
 		<link rel="manifest" href=`${import.meta.env.BASE_URL}/manifest.json`>
 
